--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=java-sonar-runner-sample
-sonar.projectName=Simple Java project analyzed with the SonarQube Runner
+sonar.projectName=HCAP
 sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src/main
